--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "notistack": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-router-dom": "^6.30.0",
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.3",
