--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,22 @@
 version: '3.8'
 
 services:
-  mysql:
-    image: mysql:8.0
-    container_name: cake-mysql
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: your_password
-      MYSQL_DATABASE: capstone_project
-      MYSQL_USER: root
-      MYSQL_PASSWORD: your_password
-    ports:
-      - "3305:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
+#  mysql:
+#    image: mysql:8.0
+#    container_name: cake-mysql
+#    restart: always
+#    environment:
+#      MYSQL_ROOT_PASSWORD: wang159357
+#      MYSQL_DATABASE: capstone_project
+#    ports:
+#      - "3305:3306"
+#    volumes:
+#      - mysql_data:/var/lib/mysql
+#    healthcheck:
+#      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 5
 
   backend:
     build: ./backend
@@ -23,20 +26,24 @@ services:
       FLASK_APP: app.py
       FLASK_ENV: development
       FLASK_DEBUG: 1
-      MYSQL_HOST: mysql
+      MYSQL_HOST: 182.92.72.100
       MYSQL_PORT: 3306
-      MYSQL_USER: root
-      MYSQL_PASSWORD: wang159357
+      MYSQL_USER: cakeuser
+      MYSQL_PASSWORD: 123456
       MYSQL_DB: capstone_project
       SECRET_KEY: your-secret-key
       TEACHER_SECRET_KEY: teacher-secret-key-2024
     ports:
       - "5000:5000"
-    depends_on:
-      - mysql
+#    depends_on:
+#      mysql:
+#        condition: service_healthy
     working_dir: /app
     volumes:
       - ./backend:/app
+    command: >
+      sh -c "python init_db.py &&
+             python app.py"
 
 volumes:
   mysql_data: 
