feat: 后端项目管理相关接口与功能完善

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.10
 
 # 设置工作目录
 WORKDIR /app
-
+COPY . /app
 # 只复制依赖文件，便于热重载时挂载代码
 COPY requirements.txt /app/
 RUN pip install --upgrade pip && pip install -r requirements.txt
@@ -12,4 +12,5 @@ RUN pip install --upgrade pip && pip install -r requirements.txt
 EXPOSE 5000
 
 # 用flask run启动，支持热重载
-CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"] 
+CMD ["flask", "--app", "app", "run", "--host=0.0.0.0", "--port=5000"] 
+ENV FLASK_DEBUG=1 
