--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,14 +3,16 @@ FROM python:3.10
 
 # 设置工作目录
 WORKDIR /app
-COPY . /app
-# 只复制依赖文件，便于热重载时挂载代码
+
+# 先只复制依赖文件，利用 Docker 缓存
 COPY requirements.txt /app/
 RUN pip install --upgrade pip && pip install -r requirements.txt
+
+# 再复制其它代码
+COPY . /app
 
 # 暴露端口
 EXPOSE 5000
 
-# 用flask run启动，支持热重载
+ENV FLASK_DEBUG=1
 CMD ["flask", "--app", "app", "run", "--host=0.0.0.0", "--port=5000"] 
-ENV FLASK_DEBUG=1 
