--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^7.0.2",
     "@mui/styled-engine-sc": "^7.0.2",
     "antd": "^5.24.6",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.7.4",
     "notistack": "^3.0.2",
     "react": "^18.3.1",
