--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/styled-engine-sc": "^7.0.2",
+    "@react-pdf-viewer/core": "^3.12.0",
     "antd": "^5.24.6",
     "framer-motion": "^12.7.4",
     "notistack": "^3.0.2",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
